# bank-csv-rs

./: .codeclimate.yml  .gitignore  .nitpick.toml  .pre-commit-config.yaml  Cargo.toml  Makefile
.github/workflows/: rust.yaml
docs/: README.md
src/: lib.rs  main.rs
