[dependencies]
chrono = "0.4.33"
clap = {features = ["derive"], version = "4.4.18"}
csv = "1.3.0"
dirs = "5.0.1"
encoding_rs = "0.8.34"
polars = {features = ["csv", "dtype-date", "lazy", "rows"], version = "0.37.0"}
shellexpand = "3.1.0"
sorted-vec = "0.8.3"
tempfile = "3.9.0"

[lints.clippy]
all = "deny"

[lints.rust]
missing_docs = "deny"

[package]
authors = ["W Augusto Andreoli <andreoli@sent.com>"]
categories = ["command-line-utilities", "finance"]
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-package-section
description = "Detect CSV files from a couple of German banks (N26, DKB) and PayPal, filter out transactions in a specific currency and generate a CSV file with these transactions"
edition = "2021"
keywords = ["banking", "csv", "dkb", "n26", "paypal"]
license = "MIT OR Apache-2.0"
name = "bank-csv"
readme = "docs/README.md"
repository = "https://github.com/andreoliwa/bank-csv-rs"
version = "0.1.0"
